# dabi2

./: .env  .gitignore  Caddyfile  Dockerfile  Makefile  README.md  create_seeds.sql  docker-compose.yaml  inspect_parquet_schema.py  pyproject.toml  read_parquet.py  read_parquet_content.py  test.parquet  test.py  test2.parquet  test3.parquet  test_orders.py  todo.txt
config/kafka-connect/: debezium-pg-connector.json  provision_debezium.sh
data/: order_products_denormalized.csv  orders.parquet  task_2g_pred.csv  test.csv  tip_testdaten_template.csv  tip_testdaten_template_V2.csv  tips_public.csv
deliverables/: Abschlussbericht.tex  abgabe.tex
init_scripts/: init_db.sql
notebooks/: Dockerfile  pyproject.toml  test_before_clickhouse.py  test_clickhouse.py
notebooks/notebooks/: DABI_2_Stand_29_06_2025.ipynb  dabi2.ipynb  dabi2_project_notebook.ipynb  eda.ipynb  mart_test.ipynb
notebooks/notebooks/utils/: db_conn.py  get_marts.py
src/backend/: main.py  pyproject.toml  read_parquet.py  test1.parquet
src/backend/static/css/: styles.css
src/backend/templates/: index.html
src/backend/utils/: duckdb_conn.py
src/consumers/: Dockerfile  README.md  main.py  pyproject.toml
src/consumers/cdc_consumer/: Dockerfile  cdc_consumer.py  config.py  kafka_handler.py  main.py  message_processor.py  minio_handler.py  prefect_handler.py  utils.py
src/prefect/: Dockerfile  oltp_schema.py  pyproject.toml  run_worker.py  simulate_oltp_events.py
src/prefect/config/: config.py  debezium-pg-connector.json
src/prefect/dbt_setup/: .user.yml  dbt_project.yml  packages.yml  profiles.yml
src/prefect/dbt_setup/models/: marts.yml  sources.yml
src/prefect/dbt_setup/models/core/: f_order_lines.sql  f_orders.sql
src/prefect/dbt_setup/models/marts/: dim_date.sql  dim_products.sql  dim_users.sql  f_order_lines.sql  f_orders.sql  mart_user_tipping_behavior_timeseries.sql
src/prefect/dbt_setup/models/staging/: schema.yml  sources.yml  stg_aisles.sql  stg_departments.sql  stg_order_products.sql  stg_order_tips.sql  stg_orders.sql  stg_products.sql  stg_tips.sql  stg_users.sql
src/prefect/dbt_setup/seeds/: historical_dim_users_source.csv  seeds.yml  stg_raw_aisles.csv  stg_raw_departments.csv  stg_raw_products.csv  stg_raw_users.csv
src/prefect/dbt_setup/snapshots/: scd_dim_products.sql  scd_dim_users.sql  scd_products.sql
src/prefect/flows/: analytics.py  analytics_task2.py  analytics_task3.py  data_pipeline.py  debezium_activation_flow.py  dwh_pipeline.py  initial_oltp_load_flow.py  test.py
src/prefect/tasks/: create_oltp_schema.py  debezium_tasks.py  load_oltp_initial.py  load_raw_data.py  run_dbt.py  run_dbt_runner.py  run_dbt_snapshot.py
src/prefect/tasks/analytics/: feature_engineering.py  load_data_clickhouse.py  model_evaluation.py  model_training.py  predictions.py  trend_bereinigung.py
src/prefect/utils/: schema.py
