[project]
name = "dscb420_projekt"
version = "0.1.0"
description = "Projektarbeit für DSCB420 - Datenanalyse und Business Intelligence 2 - SoSe2025"
authors = [
    { name = "Gruppe cool", email = "cool@h.ka.com" }, 
]
requires-python = ">=3.12"
dependencies = [
    "prefect>=2.15,<3",      
    "prefect-docker>=0.4,<0.5",
    "prefect-dbt-cli",      
    "pandas>=2.0,<3",        
    "numpy>=1.24,<2",       
    "scikit-learn>=1.3,<2",   
    "statsmodels>=0.14,<1",   
    "matplotlib>=3.7,<4",     
    "seaborn>=0.13,<1",      
    "python-dotenv>=1.0,<2",  
    "sqlalchemy>=2.0,<3",     
    "psycopg2-binary",    
    "duckdb-engine",         
    "duckdb>=0.9,<1",        
    "dbt-duckdb>=1.7,<2",    
    "dbt-postgres",       
    "jupyterlab",            
    "openpyxl",              
]

[project.optional-dependencies]
dev = [
    "pytest",               
    "ruff",                  
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "UP", "PL", "PTH", "NPY"] 
ignore = ["E501"] 

[tool.ruff.format]
quote-style = "double"
