[project]
name = "dscb420_projekt"
version = "0.1.0"
description = "Projektarbeit für DSCB420 - Datenanalyse und Business Intelligence 2 - SoSe2025"
authors = [
    { name = "Gruppe cool", email = "cool@h-ka.com" }, 
]
requires-python = ">=3.12"
dependencies = [
    "prefect",      
    "prefect-docker",
    "prefect[dbt]",      
    "pandas",        
    "numpy",       
    "scikit-learn",   
    "statsmodels",   
    "matplotlib",     
    "seaborn",      
    "python-dotenv",  
    "sqlalchemy",     
    "psycopg2-binary",    
    "duckdb-engine",         
    "duckdb",        
    "dbt-duckdb",    
    "dbt-postgres",       
    "jupyterlab",            
    "openpyxl",
    "ipykernel",
    "jupyter", 
    "pydantic_settings",             
]

[project.optional-dependencies]
dev = [
    "pytest",               
    "ruff",                  
]

