[project]
name = "notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "jupyterlab>=3.0.0",
    "ipykernel",
    "diagrams>=0.24.4",
    "pyarrow>=20.0.0",
    "statsmodels>=0.14.4",
    "seaborn>=0.13.2",
    "scikit-learn>=1.6.1",
]
