[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.2.2",
    "fastapi>=0.115.12",
    "fastparquet>=2024.11.0",
    "jinja2>=3.1.6",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
    "pydantic>=2.11.4",
    "uvicorn[standard]>=0.34.2",
]
