[project]
name = "prefect-dabi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prefect>3.0.0",
    "prefect-docker",
    "prefect[dbt]",
    "prefect-sqlalchemy",
    "pandas",
    "numpy",
    "python-dotenv",
    "sqlalchemy",
    "psycopg2-binary",
    "duckdb-engine",
    "duckdb",
    "dbt-duckdb",
    "dbt-postgres",
    "openpyxl",
    "pydantic_settings",
    "pyarrow",
    "fastparquet",
    "PyYAML",
    "prefect-dbt>=0.7.0rc1",
    "minio>=7.2.15",
    "prefect-aws>=0.5.10",
    "dbt-clickhouse>=1.9.2",
    "clickhouse-connect>=0.8.18",
    "faker>=37.4.0",
    "scikit-learn>=1.7.0",
]
